# RDK-x-VolcEngine---Human

./: README.md
src/human_aiui/: CMakeLists.txt  package.xml
src/human_aiui/AIUI/cfg/: aiui.cfg
src/human_aiui/include/: AIGateway.h  Processor.h
src/human_aiui/launch/: aiui_start.launch.py
src/human_aiui/src/: AIGateway.cpp  Processor.cpp
src/human_mic_msg/: CMakeLists.txt  package.xml
src/human_mic_ros2/: CMakeLists.txt  package.xml
src/human_mic_ros2/audio/: vvui_deno.pcm
src/human_mic_ros2/config/: param.yaml
src/human_mic_ros2/config/msc/res/asr/GrmBuilld/: call.g
src/human_mic_ros2/config/msc/res/asr/GrmBuilld/temp/: call_16K
src/human_mic_ros2/include/: call_recognition.h  human_mic.h  play_path.h  user_interface.h  voice_control.h
src/human_mic_ros2/launch/: mic_init.launch.py  voice_only.launch.py
src/human_mic_ros2/src/: call_recognition.cpp  human_mic.cpp  ros2_service.cpp  voice_control.cpp
src/test/: DM_CAN.py  action_groups.json  ai_assistant.py  both_arm.py  config.py  contol.py  dm_con.py  install_dependencies.py  read_all.py  requirements_ai_assistant.txt  requirements_ai_assistant_fixed.txt  start_assistant.sh  tts_example.py  tts_player.py  wheeltec_base_controller.py  wheeltec_camera_controller.py
src/turn_on_wheeltec_robot/launch/: wheeltec_camera.launch.py
